# HooperTTS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  benchmark.py  demo.py  evaluate.py  main.py  pronunciation.json  pyproject.toml
.github/workflows/: python.yml
core/: __init__.py  chunker.py  cli.py  optimizer.py  planner.py  profile.py  pronunciation.py  rhythm.py  style_rules.py
docs/: Architecture.md  Profiles.md  QWEN_INTEGRATION.md  Roadmap.md
evaluation/: results.csv  summary.json  summary.md
notebooks/: HooperTTS_Qwen.ipynb
output/: optimized.txt  original.txt
profiles/: default.json  documentary.json  gaming_news.json  podcast.json  youtube_shorts.json
qwen/: __init__.py  environment.py  prompt_builder.py  runner.py
samples/: gta_test.txt
tests/: test_chunker.py  test_cli.py  test_evaluate.py  test_optimizer.py  test_profile.py  test_qwen.py
